# mlops_hw1

./: README.md  app.py  models.py  pyproject.toml  requirements.txt
api/: app.py  models.py
