[tool.poetry]
name = "mlops hw1"
version = "0.1.0"
description = ""
authors = ["Арина Павлова <72310637+ArinaPavlova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
